--- a/app/src/main/res/layout/fragment_recipe_list_layout.xml
+++ b/app/src/main/res/layout/fragment_recipe_list_layout.xml
@@ -8,6 +8,8 @@
     <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/rvList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></com.airbnb.epoxy.EpoxyRecyclerView>
+        android:layout_height="match_parent"
+        android:layout_marginBottom="54dp"
+        ></com.airbnb.epoxy.EpoxyRecyclerView>
 
 </LinearLayout>
