--- a/app/src/main/res/layout/fragment_recipe_videos_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_videos_list.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    >
+    android:orientation="vertical">
 
     <com.airbnb.epoxy.EpoxyRecyclerView
         android:id="@+id/rvList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></com.airbnb.epoxy.EpoxyRecyclerView>
+        android:layout_height="match_parent"
+        android:layout_marginBottom="54dp"></com.airbnb.epoxy.EpoxyRecyclerView>
 
 </LinearLayout>
