--- a/app/src/main/res/layout/item_recipe_search.xml
+++ b/app/src/main/res/layout/item_recipe_search.xml
@@ -6,7 +6,9 @@
         xmlns:tool="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+    android:paddingTop="12dp"
+    >
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imvRecipe"
@@ -24,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/space_2"
+            android:layout_marginEnd="@dimen/space_2"
             android:text="@string/app_name"
             android:textColor="@color/black_100"
             app:layout_constraintLeft_toRightOf="@+id/imvRecipe"
