--- a/app/src/main/res/layout/item_recipe_search.xml
+++ b/app/src/main/res/layout/item_recipe_search.xml
@@ -15,7 +15,7 @@
             tool:src="@drawable/ic_launcher_background"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:layout_width="120dp"
             android:layout_height="120dp">
 
