--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,11 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.fragment.app.FragmentContainerView>
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,6 +22,6 @@
         android:id="@+id/bottomNav"
         app:menu="@menu/bottom_nav_menu"
         app:itemTextColor="@drawable/bottom_nav_selector"
-        ></com.google.android.material.bottomnavigation.BottomNavigationView>
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
