--- a/app/src/main/res/layout/item_recipe_search.xml
+++ b/app/src/main/res/layout/item_recipe_search.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
     android:paddingTop="12dp"
+    android:id="@+id/parent"
     >
 
         <androidx.appcompat.widget.AppCompatImageView
