--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,10 @@
         <item name="android:textColor">@color/dark_grey</item>
     </style>
 
+    <style name="desc_style_1" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
+
     <!--Shape Appearance for small components like chips, buttons, text fields and FABs-->
     <style name="ShapeAppearance.Recipe.SmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
